# calculator-python

./: README.md  calculator.py  gui.py  main.py  pyproject.toml
tests/: test_calculator.py
