[project]
name = "calculator-python"
version = "0.1.0"
description = ""
authors = [
    {name = "PedroHRMaschio",email = "pedrohenriquermaschio@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tk (>=0.1.0,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

